# superrag

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
services/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial.py  0002_flexible_embedding_dimensions.py  0003_telegram_integration.py  0004_connectors_company_profiles.py  0005_invitation_telegram_linking.py  0006_user_profiles_model_enablement.py  0007_team_chat.py  0008_member_presence.py  0009_team_chat_attachments_public_channel.py  0010_relationship_intelligence.py  0011_relationship_scan_runs.py
services/api/app/: __init__.py  main.py  mcp_server.py
services/api/app/api/: deps.py  router.py
services/api/app/core/: config.py  logging.py  permissions.py  rate_limit.py  security.py
services/api/app/db/: session.py
services/api/app/models/: entities.py
services/api/app/schemas/: api.py
services/api/app/services/: answer_exports.py  audit.py  chat.py  cleanup.py  (+22 more)
services/api/tests/: test_answer_exports.py  test_archive_uploads.py  test_cleanup_quality_chunking.py  test_config.py  test_connected_flow_contracts.py  test_connectors.py  test_document_review.py  test_embeddings_retrieval_eta.py  test_invitations.py  test_mcp_server.py  test_openai_web_search.py  test_queueing.py  test_relationship_intelligence.py  test_security.py  test_storage.py  test_team_chat.py  test_telegram.py  test_usage.py
(+84 files in other folders)
